changed structure of modules and added new models

--- a/Notebooks/CNNseq2seq_train.py.ipynb
+++ b/Notebooks/CNNseq2seq_train.py.ipynb
@@ -32,10 +32,14 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
+    "import sys\n",
+    "sys.path.append(\"../Modules\")\n",
+    "sys.path.append(\"../ToyDatasets\")\n",
+    "\n",
     "# local imports\n",
     "from visualize import showPlot,plotPredictions\n",
     "from models import CNNSeq2Seq\n",
-    "from ToyDatasets.timeSeries import Sinusoids"
+    "from timeSeries import Sinusoids"
    ]
   },
   {
